src/test/resources/ttml/test-suite/fail/ipd006-fail.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- Max available rendering time (IPD) exceeded on non-initial ISD due to background drawing -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
    <styling>
      <style xml:id="s1" tts:backgroundColor="red" />
    </styling>
    <layout>
      <region xml:id="r1" style="s1"/>
    </layout>
  </head>
  <body>
    <div>
      <p begin="0s" end="1s">a</p>
      <p region="r1" begin="3s" end="4s"><span style="s1">a</span><span style="s1">b</span><span style="s1">c</span><span style="s1">d</span><span style="s1">e</span><span style="s1">f</span><span style="s1">g</span><span style="s1">h</span><span style="s1">i</span><span style="s1">j</span></p>
    </div>
  </body>
</tt>
